--- a/.github/workflows/SecondFile02.yaml
+++ b/.github/workflows/SecondFile02.yaml
@@ -1,5 +1,11 @@
 name: 02 - Workflow Events
-on: push
+on: 
+    push:
+    pull_request:
+    schedule:
+        - cron: '0 0 * * *'
+    workflow-dispatch:    
+    
 
 jobs:
     echo:
