Update third-file03.yaml with windows job

--- a/.github/workflows/third-file03.yaml
+++ b/.github/workflows/third-file03.yaml
@@ -10,3 +10,10 @@ jobs:
               run: |  
                 echo "Example of showing runner os"
                 echo " The runner is $RUNNER_OS"
+    windows-echo:
+        runs-on: windows-latest
+        steps:
+            - name: ShowWindows
+              run: |
+                  echo "Example of running Windows job"
+                  echo "The runner is $RUNNER_OS"
