Update third-file03.yaml: added shell :bash

--- a/.github/workflows/third-file03.yaml
+++ b/.github/workflows/third-file03.yaml
@@ -14,6 +14,7 @@ jobs:
         runs-on: windows-latest
         steps:
             - name: ShowWindows
+              shell: bash  
               run: |
                   echo "Example of running Windows job"
                   echo "The runner is $RUNNER_OS"
