--- a/.github/workflows/04-usings-actions.yaml
+++ b/.github/workflows/04-usings-actions.yaml
@@ -15,4 +15,11 @@ jobs:
             - name: Build Edwina Alpine web server
               run: |
                 docker build -t edwina-nginx-server .github/workflows
-                docker run --name eds-web-server -p 8080:80 edwina-nginx-server
+                docker run -d --name eds-web-server -p 8080:80 edwina-nginx-server
+                docker ps
+                
+            #Test the web Server
+            - name: Test Web Server
+              run: |
+                  sleep 5
+                  curl http://localhost:8080
