--- a/.github/workflows/05-file.yaml
+++ b/.github/workflows/05-file.yaml
@@ -5,8 +5,8 @@ on:
 
 jobs:
   testfile-05:
- 
-   runs-on: ubuntu-latest
-   steps:
-      run: echo "Hello everyone"
+  runs-on: ubuntu-latest
+
+    steps:
+      run: echo Hello, world!
       
