--- a/.github/workflows/build-docker.yaml
+++ b/.github/workflows/build-docker.yaml
@@ -9,7 +9,7 @@ jobs:
             - name: checkout
               uses: actions/checkout@v4
             - name: build image
-              run: docker build ./dockerfileapp -t edwinasweeney/githubbuild:latest
+              run: docker build /workspaces/Action1/.github/workflows/dockerfilesapp -t edwinasweeney/githubbuild:latest
             - name: push image to docker hub
               run: |
                 docker push edwinasweeney/githubbuild:latest
