Changed docker to Readme foldr

--- a/.github/workflows/Dockerfile
+++ b/.github/workflows/Dockerfile
@@ -1,2 +1,5 @@
-FROM nginx:alpine
-COPY . /usr/share/nginx/html
+FROM centos7:latest
+
+ENV JAVA_SRC=/usr/lib/jvm/javajdk1.8
+ENV MYDIR=/tmp
+RUN ["/bin/bash", "-c", "echo hello"]
