ADD LOGIN DETAILS

--- a/.github/workflows/build-docker.yaml
+++ b/.github/workflows/build-docker.yaml
@@ -11,6 +11,12 @@ jobs:
             - name: Printing Folders
               run:
                 ls
+            - name: Login to Docker
+              uses: docker/login-action@v1
+              with:
+                username: ${{secrets.DOCKER_HUB_USERNAME}}
+                password: ${{secrets.DOCKER_HUB_ACCESS_TOKEN}}
+
             - name: build image
               run: docker build . -t edwinasweeney/githubbuild:latest
             - name: push image to docker hub
